--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
   margin-bottom: 62px;
 }
 
-.clicked {
+.navbar-nav .nav-item .nav-link.active.clicked {
   color: var(--active-font-color);
 }
 
@@ -50,4 +50,12 @@ h3 {
 h3 {
   max-width: 560px;
   margin: auto;
+}
+
+.main__container {
+  margin: 100px auto;
+}
+
+.main__text {
+  margin: 20px 0 50px 0;
 }
