media queries added

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,14 @@ body {
 }
 
 .header {
+  margin-top: 48px;
   margin-bottom: 62px;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.header .container-fluid .collapse {
+  justify-content: flex-end;
 }
 
 .navbar-nav .nav-item .nav-link.active.clicked {
@@ -21,13 +28,14 @@ body {
 .menu {
   margin: 0 140px;
 }
+
 .navbar .navbar-nav .nav-item .nav-link {
   color: var(--default-font-color);
 }
 
-.logo {
+/* .logo {
   padding-right: 45rem;
-}
+} */
 
 .hero {
   max-width: 1440px;
@@ -43,13 +51,20 @@ h3 {
   text-align: center;
 }
 
-.hero__text {
-  padding: 47px 0;
+h1 {
+  font-size: 72px;
+  line-height: 98px;
 }
 
 h3 {
+  font-size: 24px;
+  line-height: 35px;
   max-width: 560px;
   margin: auto;
+}
+
+.hero__text {
+  padding: 47px 0;
 }
 
 .main__container {
@@ -57,5 +72,146 @@ h3 {
 }
 
 .main__text {
-  margin: 20px 0 50px 0;
+  font-size: 28px;
+  line-height: 38px;
+  text-align: left;
+  margin: 20px 0 50px 38px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  margin: 100px 120px 40px 120px;
+}
+
+.footer__icon:not(:last-child) {
+  margin-right: 20px;
+}
+
+.footer__rights {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  line-height: 19px;
+}
+
+@media (max-width: 576px) {
+  .header {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  /* .logo {
+    padding-right: 0;
+  } */
+
+  .menu {
+    margin: 0 10px;
+  }
+
+  .hero {
+    height: auto;
+  }
+
+  h1 {
+    font-size: 46px;
+    line-height: 60px;
+  }
+
+  h3 {
+    font-size: 18px;
+    line-height: 28px;
+  }
+
+  .main__container {
+    margin: 55px auto;
+  }
+
+  .main__text {
+    font-size: 15px;
+    line-height: 22px;
+    text-align: left;
+    margin: 5px 0 15px 0px;
+  }
+
+  .footer {
+    margin: 30px 20px 20px 10px;
+  }
+
+  .footer img {
+    display: none;
+  }
+
+  .footer__icon:not(:last-child) {
+    margin-right: 10px;
+  }
+}
+
+@media (min-width: 577px) and (max-width: 819px) {
+  .header {
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+
+  /* .logo {
+    padding-right: 0;
+  } */
+
+  .menu {
+    margin: 0 30px;
+  }
+
+  h1 {
+    font-size: 60px;
+    line-height: 80px;
+  }
+
+  h3 {
+    font-size: 24px;
+    line-height: 32px;
+  }
+
+  .main__container {
+    margin: 70px auto;
+  }
+
+  .main__text {
+    font-size: 18px;
+    line-height: 20px;
+    margin: 10px 0 25px 0px;
+  }
+
+  .footer {
+    margin: 50px 55px 20px 55px;
+  }
+}
+
+@media (min-width: 820px) and (max-width: 992px) {
+  .header {
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+
+  /* .logo {
+    padding-right: 0;
+  } */
+
+  .menu {
+    margin: 0 30px;
+  }
+
+  .main__text {
+    font-size: 20px;
+    line-height: 24px;
+    margin: 10px 0 25px 0px;
+  }
+}
+
+@media (min-width: 993px) and (max-width: 1200px) {
+  .menu {
+    margin: 50px 80px;
+  }
+
+  /* .logo {
+    padding-right: 20rem;
+  } */
 }
