--- a/css/style.css
+++ b/css/style.css
@@ -33,10 +33,6 @@ body {
   color: var(--default-font-color);
 }
 
-/* .logo {
-  padding-right: 45rem;
-} */
-
 .hero {
   max-width: 1440px;
   height: 265px;
@@ -100,10 +96,6 @@ h3 {
     margin-bottom: 20px;
   }
 
-  /* .logo {
-    padding-right: 0;
-  } */
-
   .menu {
     margin: 0 10px;
   }
@@ -152,10 +144,6 @@ h3 {
     margin-bottom: 40px;
   }
 
-  /* .logo {
-    padding-right: 0;
-  } */
-
   .menu {
     margin: 0 30px;
   }
@@ -191,10 +179,6 @@ h3 {
     margin-bottom: 40px;
   }
 
-  /* .logo {
-    padding-right: 0;
-  } */
-
   .menu {
     margin: 0 30px;
   }
@@ -210,8 +194,47 @@ h3 {
   .menu {
     margin: 50px 80px;
   }
+}
 
-  /* .logo {
-    padding-right: 20rem;
-  } */
+/* About page  */
+
+.main-about {
+  margin: 0 240px 100px 240px;
+}
+
+.h1-about {
+  color: var(--default-font-color);
+  margin-bottom: 126px;
+}
+
+h2 {
+  font-size: 64px;
+  line-height: 87px;
+  margin-bottom: 36px;
+}
+
+.main-about__content {
+  display: flex;
+  align-items: center;
+}
+
+.main-about__img {
+  margin-right: 40px;
+}
+
+.about-text {
+  max-width: 460px;
+  margin: auto;
+}
+
+.about-text__links {
+  display: flex;
+}
+
+.links-text {
+  margin-right: 30px;
+}
+
+.about-icon:not(:last-child) {
+  margin-right: 30px;
 }
