--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,7 @@ h3 {
 }
 
 .main-about {
-  margin: 0 240px 100px 240px;
+  margin: 0 200px 100px 200px;
 }
 
 .about-nav {
@@ -241,15 +241,6 @@ h2 {
 .main-about__content {
   display: flex;
   align-items: center;
-}
-
-.main-about__img {
-  margin-right: 40px;
-}
-
-.about-text {
-  max-width: 460px;
-  margin: auto;
 }
 
 .about-text__links {
@@ -282,4 +273,84 @@ h2 {
 .menu_favorite h4 {
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+@media (min-width: 820px) and (max-width: 992px) {
+  .h1-about {
+    font-size: 68px;
+    line-height: 70px;
+    margin-bottom: 90px;
+  }
+
+  .main-about {
+    margin: 0 100px 50px 100px;
+  }
+
+  .about-text__heading h2 {
+    font-size: 46px;
+    line-height: 50px;
+    margin-bottom: 20px;
+  }
+}
+
+@media (min-width: 577px) and (max-width: 819px) {
+  .h1-about {
+    font-size: 56px;
+    line-height: 60px;
+    margin-bottom: 50px;
+  }
+
+  .main-about {
+    margin: 0 60px 30px 60px;
+  }
+
+  .about-text__heading h2 {
+    font-size: 38px;
+    line-height: 40px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+
+  .about-menu {
+    text-align: center;
+  }
+
+  .menu__item {
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 576px) {
+  .h1-about {
+    font-size: 44px;
+    line-height: 50px;
+    margin-bottom: 30px;
+  }
+
+  .main-about {
+    margin: 0 30px 15px 30px;
+  }
+
+  .main-about__content {
+    text-align: center;
+  }
+
+  .about-text__heading h2 {
+    font-size: 38px;
+    line-height: 40px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+
+  .about-text__links {
+    justify-content: center;
+  }
+
+  .about-menu {
+    text-align: center;
+  }
+
+  .menu__item {
+    margin-bottom: 20px;
+  }
 }
