created recipe page with content ans css

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@
   --default-font-color: #272142;
   --secondary-font-color: #fff;
   --active-font-color: #662eed;
+  --recipe-step-heading: #f65282;
   --footer-bg: #f9f7fe;
+  --border-color: #67d5d2;
 }
 
 body {
@@ -210,147 +212,5 @@ h3 {
 @media (min-width: 993px) and (max-width: 1200px) {
   .menu {
     margin: 50px 80px;
-  }
-}
-
-/* About page  */
-
-.about-header {
-  margin-bottom: 0;
-}
-
-.main-about {
-  margin: 0 200px 100px 200px;
-}
-
-.about-nav {
-  margin-bottom: 26px;
-}
-
-.h1-about {
-  color: var(--default-font-color);
-  margin-bottom: 126px;
-}
-
-h2 {
-  font-size: 64px;
-  line-height: 87px;
-  margin-bottom: 36px;
-}
-
-.main-about__content {
-  display: flex;
-  align-items: center;
-}
-
-.about-text__links {
-  display: flex;
-}
-
-.links-text {
-  margin-right: 30px;
-}
-
-.about-icon:not(:last-child) {
-  margin-right: 30px;
-}
-
-.about-menu {
-  margin-bottom: 100px;
-}
-
-.menu__heading {
-  font-size: 36px;
-  line-height: 39px;
-  margin-bottom: 41px;
-  text-align: center;
-}
-
-.menu_favorite {
-  display: flex;
-}
-
-.menu_favorite h4 {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-@media (min-width: 820px) and (max-width: 992px) {
-  .h1-about {
-    font-size: 68px;
-    line-height: 70px;
-    margin-bottom: 90px;
-  }
-
-  .main-about {
-    margin: 0 100px 50px 100px;
-  }
-
-  .about-text__heading h2 {
-    font-size: 46px;
-    line-height: 50px;
-    margin-bottom: 20px;
-  }
-}
-
-@media (min-width: 577px) and (max-width: 819px) {
-  .h1-about {
-    font-size: 56px;
-    line-height: 60px;
-    margin-bottom: 50px;
-  }
-
-  .main-about {
-    margin: 0 60px 30px 60px;
-  }
-
-  .about-text__heading h2 {
-    font-size: 38px;
-    line-height: 40px;
-    margin-top: 10px;
-    margin-bottom: 20px;
-  }
-
-  .about-menu {
-    text-align: center;
-  }
-
-  .menu__item {
-    margin-bottom: 20px;
-  }
-}
-
-@media (max-width: 576px) {
-  .h1-about {
-    font-size: 44px;
-    line-height: 50px;
-    margin-bottom: 30px;
-  }
-
-  .main-about {
-    margin: 0 30px 15px 30px;
-  }
-
-  .main-about__content {
-    text-align: center;
-  }
-
-  .about-text__heading h2 {
-    font-size: 38px;
-    line-height: 40px;
-    margin-top: 10px;
-    margin-bottom: 20px;
-  }
-
-  .about-text__links {
-    justify-content: center;
-  }
-
-  .about-menu {
-    text-align: center;
-  }
-
-  .menu__item {
-    margin-bottom: 20px;
   }
 }
