recipe page h1 added margin bottom

--- a/css/recipe-page.css
+++ b/css/recipe-page.css
@@ -1,6 +1,7 @@
 .collection__heading h1 {
   color: var(--default-font-color);
   font-weight: 700;
+  margin-bottom: 126px;
 }
 
 .collection__recipe {
