--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   --secondary-font-color: #fff;
   --active-font-color: #662eed;
   --recipe-step-heading: #f65282;
+  --contact-page-heading-color: #662eed;
   --footer-bg: #f9f7fe;
   --border-color: #67d5d2;
 }
